# ColossalCyberAdventure

./: .gitignore  .gitmodules  README.rst  [A]Flower_pipo.tsx  [A]Grass_pipo.json  [A]Grass_pipo.tsx  [A]Wall-Up_pipo.tsx  [A]WaterFall_pipo.tsx  [A]Water_pipo.json  [Base]BaseChip_pipo.json  build.md  build.py  input_prompts_kenney.tsx  pyproject.toml  resources
resources/map/: map.json
resources/map/tileset/: [A]Dirt_pipo.tsx  [A]Water_pipo.tsx  [Base]BaseChip_pipo.tsx  [Base]BaseChip_pipo_gb.tsx  dffd.tsx  map2.tmx  readme.txt
src/collosalcyberadventure/: coin.py  entity.py  main.py  window.py
src/collosalcyberadventure/client/: coin.py  colossalcyberadventure.py  entity.py  keyboard.py  main.py  player.py  window.py
src/colossalcyberadventure/: __init__.py  __main__.py  bullet.py  camera.py  coin.py  colossal_cyber_adventure.py  common.py  constants.py  create.py  death_screen.py  enemies.py  entity.py  game.py  globals.py  healthbar.py  hud.py  inventory.py  item.py  login_screen.py  main.py  player.py  projectile.py  server_game_view.py  start_screen.py  tilemap.py  weapon.py  weapons.py  window.py  xp.py
src/colossalcyberadventure/client/: main.py  player.py
src/colossalcyberadventure/resources/: map.tmx  tiles.tsx
src/colossalcyberadventure/resources/map/: 0-0.tmx  00.tmx  01.tmx  02.tmx  (+51 more)
src/colossalcyberadventure/server/: cert.pem  certificate.pem  connection.py  messages.py  protocol.py
src/scripts/: create_world_files.py  dump_sprite_hitboxes.py  dump_terrain_hitbox.py  example.tmx  hitboxes.json  static_hitboxes.json
tests/: startScreenTest.py  test_collosalcyberadventure.py
(+5 files in other folders)
