[tool.poetry]
name = "CollosalCyberAdventure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"
argparse = {version = "^1.4.0", extras = ["cli"]}
aioquic = "^0.9.20"
pycapnp = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
interruptingcow = "^0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
