[tool.poetry]
name = "colossalcyberadventure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arcade = { git = "https://github.com/pythonarcade/arcade.git" }
colossalcyberadventuremessages = { path = "./submodules/ColossalCyberAdventureMessages/", develop = false }

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
interruptingcow = "^0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
